--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -20,3 +20,11 @@
 .ul {
   list-style: none;
 }
+.bg {
+  background-color: #f2f2f2;
+  color: #000;
+}
+.profile-child-block {
+  margin-top: 10px;
+  padding: 7px 18px;
+}
