--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -28,3 +28,9 @@
   margin-top: 10px;
   padding: 7px 18px;
 }
+.container-profile-component {
+  background-color: #fff;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+}
