feat: divide style

--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -1,39 +1,5 @@
 :root {
   --primary-color: #25076b;
   --padding-top-main: 4vh;
-}
-
-.padding-t {
-  padding: var(--padding-top-main) 0px;
-}
-
-.container-div {
-  width: 76vw;
-  margin: 0px auto;
-}
-
-.container-div-max {
-  width: 96vw;
-  margin: 0px auto;
-}
-
-.ul {
-  list-style: none;
-}
-.bg {
-  background-color: #f2f2f2;
-  color: #000;
-}
-.profile-child-block {
-  margin-top: 10px;
-  padding: 7px 18px;
-}
-.container-profile-component {
-  background-color: #fff;
-  width: 100%;
-  padding: 10px;
-  border-radius: 5px;
-}
-a.link {
-  color: black;
+  --text-primary-color: #353535;
 }
