--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -2,4 +2,6 @@
   --primary-color: #25076b;
   --padding-top-main: 4vh;
   --text-primary-color: #353535;
+  --bg-main: #f2f2f2;
+  --bg-component: #fafafa;
 }
