--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,8 +1,4 @@
-.container-master {
-  color: #000;
-}
-
 .dark-theme {
-  background-color: #181717;
+  background-color: #1f1f1f;
   color: #fff;
 }
